PROD-9-26-19/force-app/main/default/objects/Relationship__c/Relationship__c.object-meta.xml
<CustomObject>
    <label>Relationship</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>