PROD-9-26-19/force-app/main/default/objects/Relationship__c/fields/Business_Unit_Rel__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Rel__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BFIN</fullName>
            </value>
            <value>
                <fullName>BPFG</fullName>
            </value>
            <value>
                <fullName>BAM</fullName>
            </value>
            <value>
                <fullName>BIM</fullName>
            </value>
            <value>
                <fullName>BPY</fullName>
            </value>
            <value>
                <fullName>BCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>