PROD-9-26-19/force-app/main/default/objects/Relationship__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <label>Importance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>