PROD-9-26-19/force-app/main/default/objects/Relationship__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Advisor / Consultant</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Rating Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>