PROD-9-26-19/force-app/main/default/objects/Relationship__c/fields/Related_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RelatedTo (Account)</relationshipLabel>
    <relationshipName>RelatedToAccount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>