PROD-9-26-19/force-app/main/default/objects/Relationship__c/fields/Related_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Related_To_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related To (Contact)</relationshipLabel>
    <relationshipName>RelatedToContact</relationshipName>
    <type>Lookup</type>
</CustomField>