PROD-9-26-19/force-app/main/default/objects/Relationship__c/recordTypes/Board_Member.recordType-meta.xml
<RecordType>
    <fullName>Board_Member</fullName>
    <active>true</active>
    <description>A relationship record of Contacts who are board members for other Accounts</description>
    <label>Board Member</label>
</RecordType>