PROD-9-26-19/force-app/main/default/objects/Relationship__c/recordTypes/Brookfield.recordType-meta.xml
<RecordType>
    <fullName>Brookfield</fullName>
    <active>true</active>
    <description>Brookfield Users relationships with other Accounts or Contacts</description>
    <label>Brookfield</label>
</RecordType>