PROD-9-26-19/force-app/main/default/objects/Relationship__c/recordTypes/Consultant.recordType-meta.xml
<RecordType>
    <fullName>Consultant</fullName>
    <active>true</active>
    <description>Account to Account relationships between Consultant Accounts and Client Accounts</description>
    <label>Consultant</label>
</RecordType>