PROD-9-26-19/force-app/main/default/objects/Relationship__c/listViews/Board_Members.listView-meta.xml
<ListView>
    <fullName>Board_Members</fullName>
    <columns>Related_To_Account__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Description__c</columns>
    <columns>Depth__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Relationship__c.Board_Member</value>
    </filters>
    <label>Board Members</label>
</ListView>